# buffalo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  trained_model_2  trained_models
simulated_games/10_game_dataset_jsonl/: game-000000000.jsonl  game-000000001.jsonl  game-000000002.jsonl  game-000000003.jsonl  game-000000004.jsonl  game-000000005.jsonl  game-000000006.jsonl  game-000000007.jsonl  game-000000008.jsonl  game-000000009.jsonl
simulated_games/1k_game_dataset/: game-000000000.csv  game-000000001.csv  game-000000002.csv  game-000000003.csv  game-000000004.csv  game-000000005.csv  game-000000006.csv  game-000000007.csv  game-000000008.csv  game-000000009.csv  game-000000010.csv  game-000000011.csv  game-000000012.csv  game-000000013.csv  game-000000014.csv  game-000000015.csv  game-000000016.csv  game-000000017.csv  game-000000018.csv  game-000000019.csv  game-000000020.csv  game-000000021.csv  game-000000022.csv  game-000000023.csv  game-000000024.csv  game-000000025.csv  game-000000026.csv  game-000000027.csv  game-000000028.csv  game-000000029.csv  game-000000030.csv  game-000000031.csv  game-000000032.csv  game-000000033.csv  game-000000034.csv  game-000000035.csv  game-000000036.csv  game-000000037.csv  game-000000038.csv  game-000000039.csv  (+960 more)
simulated_games/test1/: game-000000000.csv  game-000000001.csv  game-000000002.csv  game-000000003.csv  game-000000004.csv  game-000000005.csv  game-000000006.csv  game-000000007.csv  game-000000008.csv  game-000000009.csv
src/buffalo/: __init__.py  board.py  bots.py  dataloader.py  dqn.py  encoders.py  game.py  gui.py  models.py  simulations.py  simulator.py  train.py
tests/: test_board.py  test_bot.py  test_dataloader.py  test_encoders.py  test_hunter_dataloader.py
