[tool.poetry]
name = "buffalo"
version = "0.1.0"
description = "Buffalo board game prototype"
authors = ["Your Name <you@example.com>"]
packages = [{include = "buffalo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5"
autopep8 = "^2.3.2"
black = "^25.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120


[tool.black]
line-length = 119
