[project]
name = "buffalo"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Welch",email = "evanfwelch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "arcade (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "buffalo", from = "src"}]

[tool.pytest.ini_options]
pythonpath = ["src"]
